fixed light / dark modes

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -45,13 +45,7 @@ main {
 
   input,
   select {
-    @apply rounded-sm px-1 py-px dark:bg-bg200 dark:text-black;
-  }
-}
-
-.button-container {
-  input {
-    @apply mx-4 my-2 rounded-sm px-2;
+    @apply rounded-sm bg-bg200 px-1 py-px dark:bg-bg200 dark:text-black;
   }
 }
 
